--- a/assets/css/snakegame.css
+++ b/assets/css/snakegame.css
@@ -46,14 +46,14 @@
 		line-height: 1;
 	}
 
-    .ame {
+    #game {
         box-shadow: black 20px 10px 50px;
-
+		border-color: #FF00FF;
+		border-width: 10px;
+		border-style: solid;
     }
 
-    game {
-        
-    }
+
 	
 
 	ol, ul {
@@ -105,7 +105,7 @@
 	}
 
 	body {
-		background: #322b2b;
+		background: #3a3737;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
