--- a/assets/css/snakegame.css
+++ b/assets/css/snakegame.css
@@ -136,11 +136,28 @@ body {
 	line-height: 1;
 }
 
+#home-button {
+	position: absolute;
+	font-family: 'Arcade', sans-serif;
+	font-size: 23px;
+	font-weight: bold;
+	letter-spacing: 2px;
+	color: #A053FF;
+	text-shadow: 0 0 10px #A053FF;
+	top: -20%;
+	left: 40%;
+	border-style: solid;
+	border-color: #6a5e79;
+	border-width: 2px;
+	border-radius: 10px;
+	
+}
+
 #title {
 	position: absolute;
 	z-index: 1;
 	top: -20%;
-	left: 45%;
+	left: 42%;
 	right: 0;
 	bottom: 0;
 	font-family: 'Audiowide', sans-serif;
@@ -219,7 +236,7 @@ body {
 }
 
 body {
-	background: #3a3737;
+	background: rgb(11, 9, 9);
 }
 
 body.is-loading *,
