--- a/assets/css/snakegame.css
+++ b/assets/css/snakegame.css
@@ -144,27 +144,32 @@ body {
 	letter-spacing: 2px;
 	color: #A053FF;
 	text-shadow: 0 0 10px #A053FF;
-	top: -20%;
-	left: 40%;
+	top: -8%;
+	left: -44%;
 	border-style: solid;
 	border-color: #6a5e79;
 	border-width: 2px;
 	border-radius: 10px;
-	
+	padding: 0px 20px;
+
+	height: 10%;
+	/* text-align: center;
+	justify-content: center; */
+
 }
 
 #title {
 	position: absolute;
 	z-index: 1;
-	top: -20%;
-	left: 42%;
+	top: -10%;
+	left: 43%;
 	right: 0;
 	bottom: 0;
 	font-family: 'Audiowide', sans-serif;
-		font-size: 40px;
-		letter-spacing: 2px;
-			color: #A053FF;
-			text-shadow: 0 0 10px #A053FF;
+	font-size: 40px;
+	letter-spacing: 2px;
+	color: #A053FF;
+	text-shadow: 0 0 10px #A053FF;
 
 }
 #game {
@@ -174,6 +179,7 @@ body {
 	border-style: solid;
 	position: relative;
 		z-index: 0;
+		top: 5%;
 }
 
 
@@ -236,7 +242,7 @@ body {
 }
 
 body {
-	background: rgb(11, 9, 9);
+	background: rgb(14, 5, 47);
 }
 
 body.is-loading *,
