--- a/assets/css/asteroidTracker.css
+++ b/assets/css/asteroidTracker.css
@@ -19,6 +19,8 @@ body {
   grid-column: 1 / 3; /* span 2 columns */
   grid-row: 1 / 3; /* span 1 row */
   background-color: black;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
   width: 100%;
   height: 100%;
 }
