--- a/assets/css/spotifyVisualizer.css
+++ b/assets/css/spotifyVisualizer.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: rgb(38, 35, 35);
+    
 }
 
 .custom-select{
@@ -28,6 +29,7 @@ input[type=text]{
 .search-form {
     max-width: 500px;
     margin: 0 auto;
+    
     
 }
 
@@ -59,4 +61,22 @@ input[type=text]{
 
 .audio-wave-rect {
     opacity: 0.8;
+}
+
+.togglePlayModule {
+    height: 200px;
+    position: relative;
+    background-color: white;
+}
+
+.center {
+    margin: 0;
+    position: absolute;
+    top: 0%;
+    left: 45%;
+}
+
+#togglePlay {
+    background-color: green;
+    text-align: center;
 }
