--- a/frontend/visualapp/src/index.css
+++ b/frontend/visualapp/src/index.css
@@ -1,3 +1,12 @@
+html, body {
+  height: 100%;
+}
+
+.app-container {
+  min-height: 100%;
+  padding-bottom: 5rem; /* Adjust as desired */
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
