--- a/frontend/visualapp/src/App.css
+++ b/frontend/visualapp/src/App.css
@@ -1,6 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
 .App {
-    text-align: center;
-  }
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+  font-family: "Nunito", sans-serif;
+  background-image: linear-gradient(90deg, #272529, #8820dd);
+}
   
   .App-logo {
     height: 40vmin;
@@ -36,3 +43,8 @@
       transform: rotate(360deg);
     }
   }
+
+body {
+  padding: 0;
+  margin: 0;
+}
