--- a/website/src/gallery.css
+++ b/website/src/gallery.css
@@ -1,11 +1,13 @@
+/* Box */
+
 body {
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
+  
 }
-
-gallery {
-  width: 50%; /* adjust as needed */
-  height: 50%; /* adjust as needed */
+.thumbnails {
+  width: 60vw;
+  height: 60vh;
   border: 5px;
   border-style: solid;
   border-color: black;
@@ -13,18 +15,47 @@ gallery {
   align-items: center; /* to center the items vertically */
   justify-content: center; /* to center the items horizontally */
   position: absolute;
-  top:0;
-  bottom:0;
-  left:0;
-  right:0;
-  margin:auto;
-}
 
-first {
-  width: 25px; /* adjust as needed */
-  height: 25px; /* adjust as needed */
-  border: 3px;
-  border-style: solid;
-  border-color: black;
-  margin-right: 10px; /* adjust as needed */
 }
+/* .thumbnails { */
+  /* display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -moz-align-items: stretch;
+  -webkit-align-items: stretch;
+  -ms-align-items: stretch;
+  align-items: stretch;
+  -moz-justify-content: center;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -moz-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; */
+  
+/* } */
+
+  .thumbnails .box {
+    margin: 0 1em 2em 1em;
+    width: 30%;
+    background-color: black;
+    text-align: center;
+  }
+
+    @media screen and (max-width: 1280px) {
+
+      .thumbnails .box {
+        width: 45%;
+      }
+
+    }
+
+    @media screen and (max-width: 736px) {
+
+      .thumbnails .box {
+        width: 100%;
+      }
+
+    }
