--- a/website/src/App.css
+++ b/website/src/App.css
@@ -6,7 +6,8 @@
   /* align-items: center; */
   flex-direction: column;
   font-family: "Nunito", sans-serif;
-  background-image: linear-gradient(90deg, #272529, #8820dd);
+  /* background-image: linear-gradient(90deg, #272529, #8820dd); */
+  background-color: #626467;
 }
   
   .App-logo {
