--- a/website/src/gallery.css
+++ b/website/src/gallery.css
@@ -1,61 +1,26 @@
-/* Box */
-
-body {
-  width: 100vw;
-  height: 100vh;
-  
+.gallery {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40%;
+  width: 70%;
+  border-color: black;
+  border-style: solid;
+  margin: 0 auto;
+  max-width: 100%;
+  margin-top: 10%;
 }
-.thumbnails {
-  width: 60vw;
-  height: 60vh;
+
+.box {
+  flex: 1 0 calc(33.33% - 20px);
+  margin: 10px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  position: relative;
   border: 5px;
   border-style: solid;
   border-color: black;
-  display: flex; /* to align the items horizontally */
-  align-items: center; /* to center the items vertically */
-  justify-content: center; /* to center the items horizontally */
-  position: absolute;
-
 }
-/* .thumbnails { */
-  /* display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -moz-align-items: stretch;
-  -webkit-align-items: stretch;
-  -ms-align-items: stretch;
-  align-items: stretch;
-  -moz-justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -moz-flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; */
-  
-/* } */
-
-  .thumbnails .box {
-    margin: 0 1em 2em 1em;
-    width: 30%;
-    background-color: black;
-    text-align: center;
-  }
-
-    @media screen and (max-width: 1280px) {
-
-      .thumbnails .box {
-        width: 45%;
-      }
-
-    }
-
-    @media screen and (max-width: 736px) {
-
-      .thumbnails .box {
-        width: 100%;
-      }
-
-    }
