--- a/website/src/gallery.css
+++ b/website/src/gallery.css
@@ -1,26 +1,81 @@
-.gallery {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40%;
-  width: 70%;
-  border-color: black;
-  border-style: solid;
-  margin: 0 auto;
-  max-width: 100%;
-  margin-top: 10%;
+.thumbnails {
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-align-items: stretch;
+		-webkit-align-items: stretch;
+		-ms-align-items: stretch;
+		align-items: stretch;
+		-moz-justify-content: center;
+		-webkit-justify-content: center;
+		-ms-justify-content: center;
+		justify-content: center;
+		-moz-flex-wrap: wrap;
+		-webkit-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
+		background-color: red;
+    margin-top: 10%;
 }
 
+.thumbnails .box {
+			margin: 0 1em 2em 1em;
+			width: 30%;
+		}
+
+    @media screen and (max-width: 1280px) {
+
+				.thumbnails .box {
+					width: 45%;
+				}
+
+			}
+
+			@media screen and (max-width: 736px) {
+
+				.thumbnails .box {
+					width: 100%;
+				}
+
+			} 
+
 .box {
-  flex: 1 0 calc(33.33% - 20px);
-  margin: 10px;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-  height: 300px;
-  position: relative;
-  border: 5px;
-  border-style: solid;
-  border-color: black;
-}
+		border-radius: 4px;
+		margin-bottom: 2em;
+		background: #2c2c32;
+		text-align: center;
+	}
+
+.box > :last-child,
+		.box > :last-child > :last-child,
+		.box > :last-child > :last-child > :last-child {
+			margin-bottom: 0;
+		}
+
+		.box .image.fit {
+			margin: 0;
+		}
+
+		.box .image img {
+			border-radius: 4px 4px 0 0;
+		}
+
+		.box .inner {
+			padding: 1.5em;
+			width: 100% !important;
+		}
+
+    @media screen and (max-width: 480px) {
+
+				.box .inner {
+					padding: 1em;
+				}
+
+			}
+
+		.box.alt {
+			border: 0;
+			border-radius: 0;
+			padding: 0;
+		}
