--- a/website/src/App.css
+++ b/website/src/App.css
@@ -3,46 +3,14 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  /* align-items: center; */
   flex-direction: column;
   font-family: 'Nunito', sans-serif;
   background-image: linear-gradient(90deg, #272529, #8820dd);
   /* background-color: #626467; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#main {
+  background-color: black;
 }
 
 body {
@@ -50,8 +18,4 @@ body {
   margin: 0;
 }
 
-Gallery {
-  width: 100vw;
-  height: 50vh;
-  background-color: black;
-}
+
