--- a/website/src/App.css
+++ b/website/src/App.css
@@ -249,7 +249,7 @@ header h6 + p {
   flex-wrap: wrap;
   /* background-color: black; */
   font-family: 'Pixelated', sans-serif;
-  margin-top: 10%;
+  /* margin-top: 10%; */
   
   
   
