--- a/website/src/App.css
+++ b/website/src/App.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   font-family: 'Nunito', sans-serif;
-  background-image: linear-gradient(90deg, #272529, #8820dd);
+  
   
 }
 
@@ -250,9 +250,6 @@ header h6 + p {
   /* background-color: black; */
   font-family: 'Pixelated', sans-serif;
   /* margin-top: 10%; */
-  
-  
-  
 }
 
   .thumbnails .box {
@@ -284,12 +281,14 @@ header h6 + p {
   background: #131212;
   text-align: center;
   box-shadow: 0px 0px 10px #000000;
+  height: 50%
 }
 
   .box > :last-child,
   .box > :last-child > :last-child,
   .box > :last-child > :last-child > :last-child {
     margin-bottom: 0;
+    
   }
 
   .box .image.fit {
@@ -298,6 +297,8 @@ header h6 + p {
 
   .box .image img {
     border-radius: 4px 4px 0 0;
+    max-height: 200px;
+    max-width: 100%;
   }
 
   .box .inner {
