--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,8 @@ header {
   background: #21293a;
   color: #fff;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
+  z-index: 2;
+
 }
 
 
@@ -34,6 +36,7 @@ header .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 
@@ -42,6 +45,7 @@ header .navbar a {
   font-weight: 500; */
   text-decoration: none;
   margin: 0 0.5rem;
+  
   /* padding: 1rem 1.5rem; */
   border-radius: 05px;
   color: #fff;
