--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 15px 50px;
-  background: #21293a;
+  background: #000000;
   color: #fff;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
   z-index: 2;
@@ -410,7 +410,7 @@ header h6 + p {
 /* Box */
 
 body {
-  background-color: black
+  background-color: rgb(35, 33, 37)
 }
 
 .thumbnails {
@@ -832,4 +832,37 @@ button.style3:active,
   #main .inner {
     width: 95%;
   }
+}
+
+/* Footer Code */
+
+#footerWrapper {
+  /* background: #21293a; */
+ background: #000000;
+  color: #fff;
+  padding: 2rem 0;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+#footerLinks{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+#footerLinks a {
+    color: #fff;
+    transition: color 0.2s ease-in-out;
+}
+
+#footerLinks a:hover {
+      color: #1db954;
+}
+
+#footerText {
+  margin-top: 1rem;
+  font-size: 0.8rem;
 }
