--- a/assets/css/snakegame.css
+++ b/assets/css/snakegame.css
@@ -267,116 +267,184 @@ body {
 	line-height: 1;
 } */
 
-
-
-header {
-position: fixed;
-width: 100%;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 15px 50px;
-background: #000000;
-color: #fff;
-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
-z-index: 2;
-}
-
-header .logo {
-  font-size: 30px;
-  font-weight: 700;
-  text-decoration: none;
-  letter-spacing: 2px;
-  color: #fff;
-}
-
-header .navbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-header .navbar a {
-  text-decoration: none;
-  margin: 0 0.5rem;
-  color: #fff;
-  letter-spacing: 1px;
-}
-
-header .navbar a:hover,
-.active {
-  background: #2c3e50;
-  transition: 0.6s;
-}
-
-header .btn {
-  font-size: 25px;
-  cursor: pointer;
-  display: none;
-}
-
-
-@media (max-width: 991px) {
-  html {
-    font-size: 55%;
-  }
-
-  header {
-    padding: 1rem 2rem;
-  }
-}
-
-@media (max-width: 768px) {
-  header .btn {
-    display: block;
-  }
-
-	header .navbar {
-    position: fixed;
-    flex-direction: column;
-    min-width: 300px;
-    height: 100vh;
-    background: #2c3e50;
-    top: 0;
-    right: -100%;
-    transition: all 0.9s;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding-top: 10rem;
-  }
-
-  header .navbar.active2 {
-    right: 0;
-    transition: 0.9s;
-  }
-
-  header .navbar .close-btn {
-    position: absolute;
-    top: 0;
-    right: 1rem;
-    font-size: 2rem;
-    color: #fff;
-    cursor: pointer;
-  }
-}
-
+/* Navbar only */
 body {
+	height: 100vh;
+	width: 100vw;
+	overflow: hidden;
+} 
+  
+  
+  
+  header {
+	position: fixed;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 15px 50px;
+	background: #000000;
+	color: #fff;
+	box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.5);
+	z-index: 2;
+  
+  }
+  
+  
+  header .logo {
+	font-size: 30px;
+	font-weight: 700;
+	text-decoration: none;
+	letter-spacing: 2px;
+	color: #fff;
+  }
+  
+  
+  header .navbar {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+  }
+  
+  
+  header .navbar a {
+	font-size: 1.7rem;
+	font-weight: 500;
+	text-decoration: none;
+	margin: 0 0.5rem;
+	
+	padding: 1rem 1.5rem;
+	border-radius: 05px;
+	color: #fff;
+	letter-spacing: 1px;
+  }
+  
+  
+  header .navbar a:hover,
+  .active {
+	background: #2c3e50;
+	transition: 0.6s;
+  }
+  
+  
+  header .btn {
+	font-size: 25px;
+	cursor: pointer;
+	display: none;
+  }
+  
+  
+  section {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+  } 
+  
+   section h2 {
+	color: #fff;
+	font-size: 10rem;
+	letter-spacing: 0.9rem;
+	text-align: center;
+  } 
+  
+  
+  
+   @media (max-width: 991px) {
+	html {
+	  font-size: 55%;
+	}
+	header {
+	  padding: 1rem 2rem;
+	}
+  }
+  
+  
+  @media (max-width: 768px) {
+	header .btn {
+	  display: block;
+	} 
+  
+  
+	header .navbar {
+	  position: fixed;
+	  flex-direction: column;
+	  min-width: 300px;
+	  height: 100vh;
+	  background: #2c3e50;
+	  top: 0;
+	  right: -100%;
+	  transition: all 0.9s;
+	  align-items: flex-start;
+	  justify-content: flex-start;
+	  padding-top: 10rem;
+	}
+  
+  
+	header .navbar.active2 {
+	  right: 0;
+	  transition: 0.9s;
+	}
+  
+  
+	header .navbar .close-btn {
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  margin: 25px;
+	}
+  
+  
+	header .navbar a {
+	  display: block;
+	  font-size: 1.9rem;
+	  margin: 15px;
+	  padding: 0.5rem 15px;
+	}
+  
+  
+	header .navbar a:hover {
+	  background: #21293a;
+	  color: #fff;
+	}
+  
+  
+	header .logo {
+	  font-size: 25px;
+	  font-weight: 500;
+	}
+  
+  
+	section h2 {
+	  color: #fff;
+	  font-size: 5rem;
+	  padding: 2rem;
+	  letter-spacing: 0.9rem;
+	  text-align: center;
+	}
+  }
+  
+  /* End Navbar */
+
+/* body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
   margin: 0;
-}
+} */
 
-#game-container {
+/* #game-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   
-}
+} */
 
 
-#title {
+/* #title {
   position: absolute;
   z-index: 1;
   top: -10%;
@@ -388,8 +456,8 @@ body {
   letter-spacing: 2px;
   color: #a053ff;
   text-shadow: 0 0 10px #a053ff;
-}
-#game {
+} */
+/* #game {
   box-shadow: black 5px 5px 50px;
   border-color: #ff00ff;
   border-width: 10px;
@@ -398,7 +466,7 @@ body {
   width: 700px;
   z-index: 0;
   top: 5%;
-}
+} */
 
 
 /* #restart-container{
@@ -406,7 +474,7 @@ body {
 	height: 100px;
 	width: 100px;
 } */
-#restart-button {
+/* #restart-button {
   display: inline-block;
   position: absolute;
   display: none;
@@ -425,7 +493,7 @@ body {
   border-width: 2px;
   border-radius: 10px;
   padding: 0px 20px;
-}
+} */
 
 /* ol,
 ul {
@@ -1358,7 +1426,7 @@ table.alt tfoot {
 
 /* Button */
 
-input[type='submit'],
+/* input[type='submit'],
 input[type='reset'],
 input[type='button'],
 button,
@@ -1517,7 +1585,7 @@ button.style3:active,
   .button {
     padding: 0;
   }
-}
+} */
 
 /* .poptrox-popup {
 	-moz-box-sizing: content-box;
