--- a/snakeGame/snakegame.css
+++ b/snakeGame/snakegame.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body,
 div,
 span,
@@ -106,7 +106,7 @@ section {
 
 body {
 	line-height: 1;
-} 
+}  */
 
 /* Do not modify code below */
 
