--- a/main.css
+++ b/main.css
@@ -40,9 +40,6 @@
     flex: 1;
 }
 
-
-
-
 /* Navbar Styling */
 
 *,
@@ -437,303 +434,42 @@ body {
 
 /* Image */
 
-.image {
-  border-radius: 4px;
-  border: 0;
-  display: inline-block;
-  position: relative;
-}
-
-.image img {
-  border-radius: 4px;
-  display: block;
-}
-
-.image.left,
-.image.right {
-  max-width: 40%;
-}
-
-.image.left img,
-.image.right img {
-  width: 100%;
-}
-
-.image.left {
-  float: left;
-  padding: 0 1.5em 1em 0;
-  top: 0.25em;
-}
-
-.image.right {
-  float: right;
-  padding: 0 0 1em 1.5em;
-  top: 0.25em;
-}
-
-.image.fit {
-  display: block;
-  margin: 0 0 2em 0;
-  width: 100%;
-}
-
 .image.fit img {
   width: 100%;
 }
 
-.image.main {
-  display: block;
-  margin: 0 0 3em 0;
-  width: 100%;
-}
 
-.image.main img {
-  width: 100%;
-}
+/* Buttons */
 
-/* Button */
-
-input[type='submit'],
-input[type='reset'],
-input[type='button'],
-button,
 .button {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   background-color: #268748;
-  border: none;
-  border-radius: 8px;
-  color: #ffffff;
-
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  height: 2.85em;
-  width: 100%;
+  border-radius: 10px;
   line-height: 2.95em;
-  padding: 0 1.5em;
-  text-align: center;
-  text-decoration: none;
-  white-space: nowrap;
+  
 }
 
-input[type='submit']:hover,
-input[type='reset']:hover,
-input[type='button']:hover,
-button:hover,
 .button:hover {
   background-color: #27b1a3;
   box-shadow: 0px 0px 10px #27b1a3;
 }
 
-input[type='submit']:active,
-input[type='reset']:active,
-input[type='button']:active,
-button:active,
-.button:active {
-  background-color: #5ec0b6;
-  box-shadow: 0px 0px 20px #5ec0b6;
-}
-
-input[type='submit'].icon,
-input[type='reset'].icon,
-input[type='button'].icon,
-button.icon,
-.button.icon {
-  padding-left: 1.35em;
-}
-
-input[type='submit'].icon:before,
-input[type='reset'].icon:before,
-input[type='button'].icon:before,
-button.icon:before,
-.button.icon:before {
-  margin-right: 0.5em;
-}
-
-input[type='submit'].fit,
-input[type='reset'].fit,
-input[type='button'].fit,
-button.fit,
 .button.fit {
   display: block;
   margin: 0 0 1em 0;
   width: 100%;
 }
 
-input[type='submit'].small,
-input[type='reset'].small,
-input[type='button'].small,
-button.small,
-.button.small {
-  font-size: 0.8em;
-}
-
-input[type='submit'].big,
-input[type='reset'].big,
-input[type='button'].big,
-button.big,
-.button.big {
-  font-size: 1.35em;
-  padding: 15px 25px;
-}
-
-input[type='submit'].disabled,
-input[type='submit']:disabled,
-input[type='reset'].disabled,
-input[type='reset']:disabled,
-input[type='button'].disabled,
-input[type='button']:disabled,
-button.disabled,
-button:disabled,
-.button.disabled,
-.button:disabled {
-  background-color: rgba(255, 255, 255, 0.75) !important;
-  box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
-  color: #202024 !important;
-  cursor: default;
-  opacity: 0.25;
-}
-
-input[type='submit'].style2,
-input[type='reset'].style2,
-input[type='button'].style2,
-button.style2,
-.button.style2 {
-  background-color: #7f92cf;
-}
-
-input[type='submit'].style2:hover,
-input[type='reset'].style2:hover,
-input[type='button'].style2:hover,
-button.style2:hover,
-.button.style2:hover {
-  background-color: #92a2d6;
-}
-
-input[type='submit'].style2:active,
-input[type='reset'].style2:active,
-input[type='button'].style2:active,
-button.style2:active,
-.button.style2:active {
-  background-color: #6c82c8;
-}
-
-input[type='submit'].style3,
-input[type='reset'].style3,
-input[type='button'].style3,
-button.style3,
-.button.style3 {
-  background-color: #9d7ed0;
-}
-
-input[type='submit'].style3:hover,
-input[type='reset'].style3:hover,
-input[type='button'].style3:hover,
-button.style3:hover,
-.button.style3:hover {
-  background-color: #ab91d7;
-}
-
-input[type='submit'].style3:active,
-input[type='reset'].style3:active,
-input[type='button'].style3:active,
-button.style3:active,
-.button.style3:active {
-  background-color: #8f6bc9;
-}
 
 @media screen and (max-width: 480px) {
-  input[type='submit'],
-  input[type='reset'],
-  input[type='button'],
-  button,
   .button {
     padding: 0;
   }
 }
 
-/* Poptrox */
-
-.poptrox-popup {
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  -ms-box-sizing: content-box;
-  box-sizing: content-box;
-  background: #000;
-  box-shadow: 0 0.5em 3em 0 rgba(0, 0, 0, 0.25);
-  border-radius: 4px;
-  padding: 2em;
-  overflow: hidden;
-}
-
-.poptrox-popup .closer {
-  -moz-transition: opacity 0.2s ease-in-out;
-  -webkit-transition: opacity 0.2s ease-in-out;
-  -ms-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out;
-  text-decoration: none;
-  position: absolute;
-  top: 0.5em;
-  right: 0.5em;
-  z-index: 11000;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  white-space: nowrap;
-  text-indent: 2em;
-  overflow: hidden;
-  width: 2em;
-  height: 2em;
-  display: block;
-}
-
-.poptrox-popup .closer:before {
-  content: '\f00d';
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-transform: none !important;
-  display: block;
-  position: relative;
-  text-indent: 0;
-  border-radius: 100%;
-  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
-  color: #ffffff !important;
-  width: 2em;
-  height: 2em;
-  line-height: 2em;
-}
-
-.poptrox-popup:hover .closer {
-  opacity: 0.5;
-}
-
-.poptrox-popup:hover .closer:hover {
-  opacity: 1;
-}
-
-@media screen and (max-width: 736px) {
-  .poptrox-popup {
-    padding: 0;
-  }
-
-  .poptrox-popup .closer {
-    display: none !important;
-  }
-}
 
 /* Main */
 
-#main {
-  padding: 4em 0 2em 0;
-}
 
 @media screen and (max-width: 736px) {
   #main {
@@ -753,16 +489,10 @@ button.style3:active,
   }
 }
 
-
-
-
-
-
 /* Footer Code */
 
 #footerWrapper {
-  /* background: #21293a; */
- background: #000000;
+  background: #000000;
   color: #fff;
   padding: 2.5rem 0;
   text-align: center;
