--- a/main.css
+++ b/main.css
@@ -191,37 +191,34 @@ p {
   margin: 0 0 2em 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h3
+ {
   color: #fff;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1;
   margin: 0 0 1em 0;
 }
 
-h1 a,
+/* h1 a,
 h2 a,
 h3 a,
 h4 a,
 h5 a,
 h6 a {
-  color: inherit;
+  color: red;
+  background-color: red;
   text-decoration: none;
-}
+} */
 
-h2 {
+/* h2 {
   font-size: 1.75em;
-}
+} */
 
 h3 {
   font-size: 1.35em;
 }
 
-h4 {
+/* h4 {
   font-size: 1.1em;
 }
 
@@ -231,28 +228,28 @@ h5 {
 
 h6 {
   font-size: 0.7em;
-}
+} */
 
-sub {
+/* sub {
   font-size: 0.8em;
   position: relative;
   top: 0.5em;
-}
+} */
 
-sup {
+/* sup {
   font-size: 0.8em;
   position: relative;
   top: -0.5em;
-}
+} */
 
-blockquote {
+/* blockquote {
   border-left: solid 4px rgba(144, 144, 144, 0.25);
   font-style: italic;
   margin: 0 0 2em 0;
   padding: 0.5em 0 0.5em 2em;
-}
+} */
 
-code {
+/* code {
   background: rgba(0, 0, 0, 0.075);
   border-radius: 4px;
   border: solid 1px rgba(144, 144, 144, 0.25);
@@ -260,30 +257,31 @@ code {
   font-size: 0.9em;
   margin: 0 0.25em;
   padding: 0.25em 0.65em;
-}
+} */
 
-pre {
+/* pre {
   -webkit-overflow-scrolling: touch;
   font-family: 'Courier New', monospace;
   font-size: 0.9em;
   margin: 0 0 2em 0;
-}
+} */
 
-pre code {
+/* pre code {
   display: block;
   line-height: 1.75;
   padding: 1em 1.5em;
   overflow-x: auto;
-}
+} */
 
-hr {
+/* hr {
   border: 0;
   border-bottom: solid 1px rgba(144, 144, 144, 0.25);
   margin: 2em 0;
-}
+} */
 
-hr.major {
+/* hr.major {
   margin: 3em 0;
+  background-color: red;
 }
 
 .align-left {
@@ -296,7 +294,7 @@ hr.major {
 
 .align-right {
   text-align: right;
-}
+} */
 
 /* Box */
 
