--- a/main.css
+++ b/main.css
@@ -333,18 +333,13 @@ body {
 /* Box */
 
 .box {
-  border-radius: 4px;
+  border-radius: 15px;
   margin-bottom: 2em;
   background: #131212;
   text-align: center;
-  box-shadow: 0px 0px 15px #000000;
+  box-shadow: 0px 0px 5px #000000;
 }
 
-.box > :last-child,
-.box > :last-child > :last-child,
-.box > :last-child > :last-child > :last-child {
-  margin-bottom: 0;
-}
 
 .box .image.fit {
   margin: 0;
@@ -352,8 +347,7 @@ body {
 
 .box .image img {
   border-radius: 4px 4px 0 0;
-  max-height: 200px;
-  max-width: 100%;
+  /* left off here */
 }
 
 .box .inner {
