--- a/main.css
+++ b/main.css
@@ -2,12 +2,13 @@
 
 .about-container{
     display: flex;
+    margin: 40px;
+    padding: 20px;
 }
 
 .about-me {
     text-align: left;
     padding: 20px;
-    border: 2px solid yellow;
 }
 
 .about-me h3 {
@@ -28,16 +29,23 @@
     width: 300px;
     height: 200px;
     margin-right: 20px;
-    border: 2px solid white;
+    border-radius: 50%;
+    background-color: white;
     overflow: hidden;
 }
 
 .picture img {
     width: 100%;
+    border-radius: 50%;
 }
 
 .bio {
     flex: 1;
+    background-color: #f2f2f2;
+    padding: 20px;
+    color: #000000;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
 }
 
 /* Navbar Styling */
@@ -192,7 +200,7 @@ p {
 }
 
 h3
- {
+{
   color: #fff;
   font-weight: 400;
   line-height: 1;
@@ -308,14 +316,14 @@ body {
   align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 5%;
-  margin-bottom: 10%;
+  margin-top: 10%;
+  background-color: gray;
 }
 
 .thumbnails .box {
   margin: 0em 1em 2em 1em;
   width: 30%;
-  background-color: black;
+  background-color: red;
 }
 
 @media screen and (max-width: 1280px) {
@@ -347,7 +355,10 @@ body {
 
 .box .image img {
   border-radius: 4px 4px 0 0;
-  /* left off here*/
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  
 }
 
 .box .inner {
@@ -360,14 +371,6 @@ body {
     padding: 1em;
   }
 }
-
-.box.alt {
-  border: 0;
-  border-radius: 0;
-  padding: 0;
-}
-
-
 
 /* Image */
 
