--- a/main.css
+++ b/main.css
@@ -29,23 +29,29 @@
     width: 300px;
     height: 200px;
     margin-right: 20px;
-    border-radius: 50%;
-    background-color: white;
     overflow: hidden;
 }
 
 .picture img {
     width: 100%;
     border-radius: 50%;
+    
+    
 }
 
 .bio {
     flex: 1;
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     padding: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #000000;
-    border-radius: 10px;
+    border-radius: 40px;
     box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+}
+
+.bio h3 {
+  color: black;
+  text-align: center;
 }
 
 /* Navbar Styling */
@@ -307,7 +313,7 @@ h6 {
 /* Box */
 
 body {
-  background-color: rgb(11, 10, 11);
+  background-color: rgb(0, 0, 0);
   
 }
 
@@ -316,14 +322,20 @@ body {
   align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 10%;
-  background-color: gray;
+  margin-top: 2%;
+  
 }
 
 .thumbnails .box {
   margin: 0em 1em 2em 1em;
   width: 30%;
-  background-color: red;
+  background-color: rgb(0, 0, 0);
+}
+
+@media screen and (max-width: 2000px) {
+  .thumbnails .box {
+    width: 30%;
+  }
 }
 
 @media screen and (max-width: 1280px) {
