--- a/battleShipPage/battleshipGame.css
+++ b/battleShipPage/battleshipGame.css
@@ -1,12 +1,187 @@
-/* CSS styling to make a 400px by 400px game board with 10x10 fraction grids using display grid */
-#player1-board, #player2-board {
-    width: 400px;
-    height: 400px;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
+body {
+    height: 100vh;
+    width: 100vw;
+    background-image: linear-gradient(45deg, #3b0154, #7803b3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -1.8%;
 }
 
-#player1-board .cell, #player2-board .cell {
-    border: 1px solid black;
+#board-selection-screen {
+    background-color: rgb(0, 0, 0);
+    border: solid 10px rgb(0, 0, 0);
+    width: 80%;
+    height: 80%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+    gap: 60px;
+
+}
+
+#player1-selection-ships {
+    height: 600px;
+    width: 600px;
+    color: white;
+    font-size: 13px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 20px;
+    background-color: rgb(4, 67, 161);
+}
+
+#player1-submarine {
+    height: 120px;
+    width: 60px;
+    background-color: black;
+    grid-row: 1/5;
+    grid-column: 5;
+}
+
+#player1-selection-board {
+  width: 600px;
+  height: 600px;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+}
+
+#player1-selection-board .cell {
+    border: 2px solid rgb(255, 255, 255);
+}
+
+#main-game-container {
+    background-color: black;
+    border: solid 10px rgb(0, 0, 0);
+    width: 80%;
+    height: 80%;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    text-align: center;
+}
+
+/* CSS styling to make a 400px by 400px game board with 10x10 fraction grids using display grid */
+#player1-board,
+#player2-board {
+  width: 600px;
+  height: 600px;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+}
+
+#player1-board .cell,
+#player2-board .cell {
+    border: 2px solid rgb(255, 255, 255);
+}
+
+
+/* Navbar */
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: linear-gradient(45deg, #3b0154, #7803b3);
+  color: white;
+  padding: 0 16rem;
+  height: 3rem;
+  font-family: 'Press Start 2P', sans-serif;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  min-width: 768px;
+}
+
+.menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin-left: 1.5rem;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1.65;
+  letter-spacing: 1.5px;
+}
+
+.menu li a:hover {
+  color: rgb(41, 168, 32);
+}
+
+/* Footer Code */
+
+#footerWrapper {
+  /* background: #21293a; */
+  background: #000000;
+  color: #fff;
+  padding: 2.5rem 0;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+#footerLinks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+#footerLinks a {
+  color: #fff;
+  transition: color 0.2s ease-in-out;
+}
+
+#footerLinks a:hover {
+  color: #1db954;
+}
+
+#footerText {
+  margin-top: 1rem;
+  font-size: 0.8rem;
+}
+
+/* Media queries for both mobile and desktop */
+@media (max-width: 480px) {
+  nav {
+    padding: 0 1rem;
+  }
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .canvas-grid {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+  .message {
+    font-size: small;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  nav {
+    padding: 0 8rem;
+  }
+  .canvas-grid {
+    margin-top: 15rem;
+    margin-bottom: 15rem;
+  }
 }
