--- a/battleShipPage/battleshipGame.css
+++ b/battleShipPage/battleshipGame.css
@@ -34,7 +34,11 @@ body {
     background-color: rgb(4, 67, 161);
 }
 
-.submarine {
+.drop-zone--over {
+  opacity: 0.5;
+}
+
+#submarine {
     height: 120px;
     width: 60px;
     background-color: black;
@@ -43,7 +47,7 @@ body {
     
 }
 
-.carrier {
+#carrier {
     height: 120px;
     width: 60px;
     background-color: black;
@@ -52,7 +56,7 @@ body {
     
 }
 
-.destroyer {
+#destroyer {
     height: 120px;
     width: 60px;
     background-color: black;
@@ -61,7 +65,7 @@ body {
     
 }
 
-.battleship {
+#battleship {
     height: 120px;
     width: 60px;
     background-color: black;
@@ -70,7 +74,7 @@ body {
     
 }
 
-.cruiser {
+#cruiser {
     height: 120px;
     width: 60px;
     background-color: black;
